--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <body>
       <h1>Title</h1>
       <p>Something</p>
+      <img href='https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQJlwSiVSYPSDq3WyLiDm8KUZyUwX8z8DskuvOC9u3ENsxbGPRa_Ah3odil3LKaZOU8Ev-ZYZ9fBcqqrfA'>
+      <click>a</click>
     </body>
   </head>
 </html>
