--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>AJ</title>
     <body>
+      background-color = green;
       <h1>Title</h1>
       <p>Something</p>
       <img src ='https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQJlwSiVSYPSDq3WyLiDm8KUZyUwX8z8DskuvOC9u3ENsxbGPRa_Ah3odil3LKaZOU8Ev-ZYZ9fBcqqrfA'>
