--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>AJ</title>
     <body>
-      <body style="background-color:blue;">
+      <body style="background-color:#d89bf2;">
       <h1 style ="color:red">DOG</h1>
       <p>Something</p>
       <img src ='https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQJlwSiVSYPSDq3WyLiDm8KUZyUwX8z8DskuvOC9u3ENsxbGPRa_Ah3odil3LKaZOU8Ev-ZYZ9fBcqqrfA'>
