--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <body>
       <body style="background-color:#5e9169;">
       <h1 style ="color:#cae6d0">Hi Welcome to the end</h1>
+        <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
       <p>Something</p>
       <img src ='https://encrypted-tbn3.gstatic.com/licensed-image?q=tbn:ANd9GcQJlwSiVSYPSDq3WyLiDm8KUZyUwX8z8DskuvOC9u3ENsxbGPRa_Ah3odil3LKaZOU8Ev-ZYZ9fBcqqrfA'>
     </body>
