--- a/new.html
+++ b/new.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
 
+<html>
+  <head>
+    <title>Other</title>
+    <body>
+      <img href ="https://en.wikipedia.org/wiki/Plant">
+    </body>
