--- a/new.html
+++ b/new.html
@@ -2,7 +2,9 @@
 
 <html>
   <head>
-    <title>Other</title>
+    
     <body>
-      <img href ="https://en.wikipedia.org/wiki/Plant">
+      
     </body>
+  </head>
+</html>
